--- a/User information/app & style/style.css
+++ b/User information/app & style/style.css
@@ -10,4 +10,6 @@ div {
     border: 2px solid rgb(53, 65, 77);
     border-radius: 10px;
     padding: 20px;
+    font-size: 1.5em;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
