--- a/room learn/time chenge/style.css
+++ b/room learn/time chenge/style.css
@@ -1,1 +1,37 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  direction: rtl;
+}
+
+div.wrapper {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-image: url("pexels-aleksandar-pasaric-325185.jpg");
+  background-size: cover;
+}
+
+div.wrapper div.box {
+  width: 50%;
+  height: 50%;
+  border: 5px solid #1e1e229f;
+  border-radius: 15px;
+  background-color: #460dcc52;
+  -webkit-box-shadow: 5px 5px 15px 1px #040404;
+          box-shadow: 5px 5px 15px 1px #040404;
+}
+/*# sourceMappingURL=style.css.map */
