--- a/room learn/time chenge/style.scss
+++ b/room learn/time chenge/style.scss
@@ -1,13 +1,17 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     direction: rtl;
 }
 
-div.wrapper{
+div.wrapper {
     width: 100%;
     height: 100%;
     display: flex;
@@ -15,12 +19,22 @@ div.wrapper{
     align-items: center;
     background-image: url('pexels-aleksandar-pasaric-325185.jpg');
     background-size: cover;
-    div.box{
+
+    div.box {
         width: 50%;
         height: 50%;
         border: 5px solid #1e1e229f;
         border-radius: 15px;
         background-color: #460dcc52;
         box-shadow: 5px 5px 15px 1px #040404;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        div {
+            direction: ltr;
+            font-family: 'Share Tech Mono', monospace;
+            font-size: 2rem;
+        }
     }
 }
