--- a/room learn/massage login/root/style.css
+++ b/room learn/massage login/root/style.css
@@ -1,1 +1,14 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Redressed&family=Ubuntu:wght@300&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  background: url("../image/pexels-pratik-gupta-2748716.jpg");
+  background-size: cover;
+  font-family: 'Redressed', cursive;
+}
+/*# sourceMappingURL=style.css.map */
