--- a/room learn/massage login/root/style.css
+++ b/room learn/massage login/root/style.css
@@ -11,4 +11,9 @@ body {
   background-size: cover;
   font-family: 'Redressed', cursive;
 }
+
+body div {
+  width: 100%;
+  height: 100%;
+}
 /*# sourceMappingURL=style.css.map */
