--- a/room learn/massage login/root/style.scss
+++ b/room learn/massage login/root/style.scss
@@ -13,4 +13,8 @@ body {
     background: url('../image/pexels-pratik-gupta-2748716.jpg');
     background-size: cover;
     font-family: 'Redressed', cursive;
+    div{
+        width: 100%;
+        height: 100%;
+    }
 }
