--- a/room learn/massage login/root/style.css
+++ b/room learn/massage login/root/style.css
@@ -16,4 +16,33 @@ body div {
   width: 100%;
   height: 100%;
 }
+
+body div.wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body div.wrapper div.box {
+  width: 50%;
+  height: 50%;
+  background-color: rgba(0, 153, 255, 0.623);
+  border: 5px solid rgba(19, 19, 39, 0.795);
+  border-radius: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
 /*# sourceMappingURL=style.css.map */
