--- a/room learn/massage login/root/style.scss
+++ b/room learn/massage login/root/style.scss
@@ -13,8 +13,25 @@ body {
     background: url('../image/pexels-pratik-gupta-2748716.jpg');
     background-size: cover;
     font-family: 'Redressed', cursive;
-    div{
+
+    div {
         width: 100%;
         height: 100%;
+
+        &.wrapper {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            div.box {
+                width: 50%;
+                height: 50%;
+                background-color: rgba(0, 153, 255, 0.623);
+                border: 5px solid rgba(19, 19, 39, 0.795);
+                border-radius: 15px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        }
     }
 }
