--- a/room learn/massage login/root/style.scss
+++ b/room learn/massage login/root/style.scss
@@ -29,8 +29,12 @@ body {
                 border: 5px solid rgba(19, 19, 39, 0.795);
                 border-radius: 15px;
                 display: flex;
+                flex-direction: column;
                 justify-content: center;
                 align-items: center;
+                direction: rtl;
+                font-size: 2rem;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             }
         }
     }
