--- a/room learn/massage login/root/style.css
+++ b/room learn/massage login/root/style.css
@@ -12,12 +12,9 @@ body {
   font-family: 'Redressed', cursive;
 }
 
-body div {
+body div.wrapper {
   width: 100%;
   height: 100%;
-}
-
-body div.wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -49,7 +46,11 @@ body div.wrapper div.box {
       -ms-flex-align: center;
           align-items: center;
   direction: rtl;
-  font-size: 2rem;
+  font-size: 1.3rem;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+body div.wrapper div.box div {
+  text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
