--- a/room learn/massage login/root/style.scss
+++ b/room learn/massage login/root/style.scss
@@ -15,13 +15,13 @@ body {
     font-family: 'Redressed', cursive;
 
     div {
-        width: 100%;
-        height: 100%;
-
         &.wrapper {
+            width: 100%;
+            height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
+
             div.box {
                 width: 50%;
                 height: 50%;
@@ -33,8 +33,12 @@ body {
                 justify-content: center;
                 align-items: center;
                 direction: rtl;
-                font-size: 2rem;
+                font-size: 1.3rem;
                 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+                div {
+                    text-align: center;
+                }
             }
         }
     }
