--- a/room learn/login only one name/root/style.css
+++ b/room learn/login only one name/root/style.css
@@ -1,1 +1,26 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  font-family: 'Rubik', sans-serif;
+}
+
+div.continer {
+  width: 100%;
+  height: 100%;
+  background: url("../image/backg.jpg");
+  background-size: cover;
+}
+
+div.continer div.box {
+  width: 50%;
+  height: 50%;
+  border: 5px solid #ffffdae9;
+  border-radius: 20px;
+}
+/*# sourceMappingURL=style.css.map */
