--- a/room learn/login only one name/root/style.scss
+++ b/room learn/login only one name/root/style.scss
@@ -1,22 +1,59 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     font-family: 'Rubik', sans-serif;
 }
-div.continer{
+
+div.continer {
     width: 100%;
     height: 100%;
     background: url('../image/backg.jpg');
     background-size: cover;
-    div.box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    div.box {
         width: 50%;
         height: 50%;
-        border: 5px solid #ffffdae9;
+        border: 5px solid #ffffdaa8;
         border-radius: 20px;
+        background-color: #000000;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        div.error-user{
+            color: white;
+            font-size: 1.4rem;
+            opacity: 100%;
+            animation-name: load;
+            animation-duration: 4s;
+            text-align: center;
+        }
+    }
+
+    div.box-filter {
+        background-color: #18124670;
+        backdrop-filter: blur(9px);
+    }
+}
+@keyframes load {
+    0%{
+        transform: translateY(60px);
+        opacity: 0%;
+    }
+    50%{
+        // transform: translateY(10px);
+        opacity: 50%;
+    }
+    100%{
+        transform: translateY(0);
+        opacity: 100%;
     }
 }
