--- a/room learn/login only one name/root/style.css
+++ b/room learn/login only one name/root/style.css
@@ -27,8 +27,9 @@ div.continer {
 }
 
 div.continer div.box {
-  width: 50%;
+  width: 35%;
   height: 50%;
+  margin: 0 20px;
   border: 5px solid #ffffdaa8;
   border-radius: 20px;
   background-color: #000000;
@@ -41,6 +42,8 @@ div.continer div.box {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  color: white;
+  font-size: 1.4rem;
 }
 
 div.continer div.box div.error-user {
