--- a/room learn/login only one name/root/style.scss
+++ b/room learn/login only one name/root/style.scss
@@ -20,15 +20,19 @@ div.continer {
     align-items: center;
 
     div.box {
-        width: 50%;
+        width: 35%;
         height: 50%;
+        margin: 0 20px;
         border: 5px solid #ffffdaa8;
         border-radius: 20px;
         background-color: #000000;
         display: flex;
         justify-content: center;
         align-items: center;
-        div.error-user{
+        color: white;
+        font-size: 1.4rem;
+
+        div.error-user {
             color: white;
             font-size: 1.4rem;
             opacity: 100%;
@@ -43,16 +47,19 @@ div.continer {
         backdrop-filter: blur(9px);
     }
 }
+
 @keyframes load {
-    0%{
+    0% {
         transform: translateY(60px);
         opacity: 0%;
     }
-    50%{
+
+    50% {
         // transform: translateY(10px);
         opacity: 50%;
     }
-    100%{
+
+    100% {
         transform: translateY(0);
         opacity: 100%;
     }
