create an initial style

--- a/room learn/DOM project/01 lamp project/root/main.css
+++ b/room learn/DOM project/01 lamp project/root/main.css
@@ -1,1 +1,49 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border: none;
+}
+
+div.continer {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+div.continer div.box img {
+  width: 30%;
+  height: auto;
+}
+
+div.continer div.bot {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+div.continer div.bot bottom {
+  width: 40px;
+  height: 20px;
+  border: none;
+  background-color: #0ba00b;
+}
+/*# sourceMappingURL=main.css.map */
