--- a/room learn/DOM project/01 lamp project/root/main.scss
+++ b/room learn/DOM project/01 lamp project/root/main.scss
@@ -12,12 +12,18 @@ div.continer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    align-self: center;
 
     div {
         &.box {
+            width: 100%;
+            height: auto;
+            display: flex;
+            justify-content: center;
             img {
-                width: 30%;
+                width: 50%;
                 height: auto;
+                margin: 0 auto;
             }
         }
 
@@ -27,11 +33,22 @@ div.continer {
             display: flex;
             justify-content: center;
 
-            bottom {
-                width: 40px;
-                height: 20px;
+            button {
+                width: 80px;
+                height: 30px;
+                margin: 0 10px;
                 border: none;
+                border-radius: 10px;
                 background-color: rgb(11, 160, 11);
+                transition: all 0.5s;
+
+                &:hover {
+                    box-shadow: 1px 1px 8px 1px black;
+                }
+
+                &:focus {
+                    box-shadow: 1px 1px 1px 1px black;
+                }
             }
         }
     }
