--- a/room learn/DOM project/02 login form/root/style/main.css
+++ b/room learn/DOM project/02 login form/root/style/main.css
@@ -1,1 +1,105 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Mono:wght@300&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  border: none;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+*:focus, *:active, *:visited, *:focus-visible, *:focus-within {
+  border: none;
+  outline: none;
+}
+
+div.box {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+div.box form {
+  width: 30%;
+  height: 60%;
+  font-family: "Red Hat Mono", monospace;
+  border: 2px solid #0a160d;
+  border-radius: 15px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[8];
+      grid-template-columns: repeat(8, 1fr);
+  -ms-grid-rows: (1fr)[10];
+      grid-template-rows: repeat(10, 1fr);
+  -webkit-box-shadow: 2px 2px 10px 1px #0a160d;
+          box-shadow: 2px 2px 10px 1px #0a160d;
+}
+
+div.box form input.text-in {
+  border-bottom: 1px solid #0a160d;
+  padding: 0 5px;
+}
+
+div.box form input.input-1 {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 6;
+  grid-column: 2/ 8;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/ 3;
+}
+
+div.box form input.input-2 {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 6;
+  grid-column: 2/8;
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 1;
+  grid-row: 4/5;
+}
+
+div.box form button.input-3 {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2/4;
+  -ms-grid-row: 6;
+  -ms-grid-row-span: 1;
+  grid-row: 6/7;
+}
+
+div.box form button.input-4 {
+  -ms-grid-column: 5;
+  -ms-grid-column-span: 2;
+  grid-column: 5/7;
+  -ms-grid-row: 6;
+  -ms-grid-row-span: 1;
+  grid-row: 6/7;
+}
+
+div.boxAlert {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 30%;
+  height: auto;
+  padding: 15px;
+  display: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #ff4400;
+  border-radius: 15px;
+  -webkit-box-shadow: 1px 1px 5px 2px #0a160d;
+          box-shadow: 1px 1px 5px 2px #0a160d;
+}
+/*# sourceMappingURL=main.css.map */
