--- a/room learn/DOM project/03 form login/style/main.scss
+++ b/room learn/DOM project/03 form login/style/main.scss
@@ -1,5 +1,104 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+.wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    color: white;
+
+    form {
+        width: 100%;
+        height: 50vh;
+        display: grid;
+        grid-template-columns: repeat(10, 1fr);
+        grid-template-rows: repeat(10, 1fr);
+
+        input {
+            color: rgb(7, 118, 197);
+            padding: 0 10px;
+
+            font: {
+                size: 2rem;
+                family: tahoma;
+            }
+
+            background: rgb(30, 31, 34);
+            border: none;
+            width: 100%;
+            grid-column: 2/10;
+            position: relative;
+
+            &.input {
+                &-1 {
+                    grid-row: 1/3;
+                }
+
+                &-2 {
+                    grid-row: 4/6;
+                }
+            }
+
+            transition: all 0.5s;
+
+            &:focus {
+                outline: none;
+                border: 2px solid rgb(7, 118, 197);
+                box-shadow: 0 2px 15px rgb(7, 118, 197);
+            }
+
+        }
+
+        button {
+            font: {
+                size: 2rem;
+                familly: tahoma;
+            }
+
+            color: rgb(7, 118, 197);
+            background: transparent;
+            border: 2px solid rgb(7, 118, 197);
+            grid-column: 2/10;
+            grid-row: 7/9;
+            position: relative;
+            transition: all 0.5s;
+
+            &:focus {
+                background-color: rgb(7, 118, 197);
+                top: 0;
+                left: 0;
+                color: black;
+                box-shadow: 0 2px 15px rgb(120, 186, 234);
+            }
+        }
+    }
+}
+
+.alert {
+    width: 70%;
+    height: auto;
+    padding: 15px 10px;
+    background: rgb(35, 149, 230);
+    color: white;
+    position: absolute;
+    top: 30px;
+    left: 50px;
+    border-radius: 5px;
+
+    text: {
+        align: center;
+    }
+
+    font: {
+        size: 1.4rem;
+        family: tahoma;
+    }
+
+    display: none;
 }
