--- a/room learn/DOM project/03 form login/style/main.css
+++ b/room learn/DOM project/03 form login/style/main.css
@@ -5,6 +5,10 @@
           box-sizing: border-box;
 }
 
+body {
+  position: relative;
+}
+
 .wrapper {
   width: 100%;
   height: 100%;
@@ -101,6 +105,22 @@
   color: white;
   position: absolute;
   top: 30px;
+  left: 50px;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 1.4rem;
+  font-family: tahoma;
+  display: none;
+}
+
+.alert-set {
+  width: 70%;
+  height: auto;
+  padding: 15px 10px;
+  background: #23e633;
+  color: white;
+  position: absolute;
+  top: 90px;
   left: 50px;
   border-radius: 5px;
   text-align: center;
