--- a/room learn/DOM project/03 form login/style/main.scss
+++ b/room learn/DOM project/03 form login/style/main.scss
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    position: relative;
+}
+
 .wrapper {
     width: 100%;
     height: 100%;
@@ -100,5 +104,27 @@
         family: tahoma;
     }
 
+    display: none;
+}
+
+.alert-set {
+    width: 70%;
+    height: auto;
+    padding: 15px 10px;
+    background: rgb(35, 230, 51);
+    color: white;
+    position: absolute;
+    top: 90px;
+    left: 50px;
+    border-radius: 5px;
+
+    text: {
+        align: center;
+    }
+
+    font: {
+        size: 1.4rem;
+        family: tahoma;
+    }
     display: none;
 }
